src/objects/Patient__c.object
<CustomObject>
    <description>Core object in the PRM data model.</description>
    <fields>
        <fullName>Advocate_Email__c</fullName>
        <label>Advocate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Advocate_Name__c</fullName>
        <inlineHelpText>Enter in the name of the person that will reprisent the patent.</inlineHelpText>
        <label>Advocate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advocate_Phone__c</fullName>
        <label>Advocate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(
MONTH(TODAY())&gt;MONTH(Date_of_Birth__c),
YEAR(TODAY())-YEAR(Date_of_Birth__c), 
IF(AND(MONTH(TODAY()) = MONTH(Date_of_Birth__c), DAY(TODAY()) &gt;= DAY(Date_of_Birth__c)), 
YEAR(TODAY())-YEAR(Date_of_Birth__c), 
(YEAR(TODAY())-YEAR(Date_of_Birth__c))-1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>the data when the lead was born</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Receipt_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Receipt Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ins_Authorization_Num__c</fullName>
        <label>Authorization #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ins_Benefit_Percentage__c</fullName>
        <label>Benefit Percentage</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ins_Claim_Address__c</fullName>
        <label>Claim Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ins_Clinic_Num__c</fullName>
        <label>Clinic #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ins_Co_Pay__c</fullName>
        <label>Co-pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ins_Comments__c</fullName>
        <label>Insurance Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ins_Contact__c</fullName>
        <label>Insurance Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ins_Deductible__c</fullName>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ins_Dependent_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dependent Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ins_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ins_Group__c</fullName>
        <label>Group #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ins_Lifetime_Max__c</fullName>
        <label>Lifetime Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ins_Name__c</fullName>
        <description>Name of Insurance</description>
        <label>Insurance Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ins_Out_of_Pocket_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Pocket Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ins_Out_of_Pocket__c</fullName>
        <label>Patient&apos;s Out of Pocket (Stop-Loss)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ins_Policy__c</fullName>
        <label>Policy #/ID #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ins_Pre_Auth_Phone__c</fullName>
        <label>Pre-Auth Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ins_Pre_Cert_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Cert Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ins_Pre_Existing_Clause_Applies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Existing Clause Applies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ins_Verification_Date__c</fullName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ins_Verify_Phone__c</fullName>
        <label>Verification Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_Network__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Insurance Network</label>
        <referenceTo>Insurance_Network__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Communication__c</fullName>
        <label>Last Communication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Profile_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medical Profile Type</label>
        <referenceTo>PRM_Medical_Profile_Link__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Reviews_Fax__c</fullName>
        <label>Medical Reviews Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MphRx_Patient_ID__c</fullName>
        <label>MphRx Patient ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Number_Rank__c</fullName>
        <label>Original Number Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name__c</fullName>
        <label>Patient First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Id__c</fullName>
        <label>Patient Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Quality__c</fullName>
        <label>Patient Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patient_Stage__c</fullName>
        <label>Patient Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swahili</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Security__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>(GMT -12:00) Eniwetok, Kwajalein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -11:00) Midway Island, Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -10:00) Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -9:00) Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -8:00) Pacific Time (US &amp; Canada)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -7:00) Mountain Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -6:00) Central Time (US &amp; Canada), Mexico City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -5:00) Eastern Time (US &amp; Canada), Bogota, Lima</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -4:00) Atlantic Time (Canada), Caracas, La Paz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -3:30) Newfoundland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -3:00) Brazil, Buenos Aires, Georgetown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -2:00) Mid-Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT -1:00 hour) Azores, Cape Verde Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT) Western Europe Time, London, Lisbon, Casablanca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +1:00 hour) Brussels, Copenhagen, Madrid, Paris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +2:00) Kaliningrad, South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +3:00) Baghdad, Riyadh, Moscow, St. Petersburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +3:30) Tehran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +4:30) Kabul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +5:30) Bombay, Calcutta, Madras, New Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +5:45) Kathmandu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +6:00) Almaty, Dhaka, Colombo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +7:00) Bangkok, Hanoi, Jakarta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +8:00) Beijing, Perth, Singapore, Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +9:30) Adelaide, Darwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +10:00) Eastern Australia, Guam, Vladivostok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(GMT +11:00) Magadan, Solomon Islands, New Caledonia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hashid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>hashid</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Email__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Care_Team__c</fullName>
        <label>Care Team</label>
    </sharingReasons>
</CustomObject>